cmake_minimum_required(VERSION 3.5)

project(crashpad_handler LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(CRASHPAD_PATH ../../..)
set(CHROMIUM_PATH ${CRASHPAD_PATH}/third_party/mini_chromium/mini_chromium)

set(HANDLER_SRC
    ${CRASHPAD_PATH}/third_party/getopt/getopt.cc
    ${CRASHPAD_PATH}/third_party/getopt/getopt.h

    ${CRASHPAD_PATH}/compat/win/getopt.h
    ${CRASHPAD_PATH}/compat/win/strings.cc
    ${CRASHPAD_PATH}/compat/win/strings.h
    ${CRASHPAD_PATH}/compat/win/time.cc
    ${CRASHPAD_PATH}/compat/win/time.h
    ${CRASHPAD_PATH}/compat/win/winbase.h
    ${CRASHPAD_PATH}/compat/win/winnt.h
    ${CRASHPAD_PATH}/compat/win/winternl.h
    ${CRASHPAD_PATH}/compat/win/sys/time.h
    ${CRASHPAD_PATH}/compat/win/sys/types.h

    ${CRASHPAD_PATH}/handler/crash_report_upload_thread.cc
    ${CRASHPAD_PATH}/handler/crash_report_upload_thread.h
    ${CRASHPAD_PATH}/handler/handler_main.cc
    ${CRASHPAD_PATH}/handler/handler_main.h
    ${CRASHPAD_PATH}/handler/minidump_to_upload_parameters.cc
    ${CRASHPAD_PATH}/handler/minidump_to_upload_parameters.h
    ${CRASHPAD_PATH}/handler/prune_crash_reports_thread.cc
    ${CRASHPAD_PATH}/handler/prune_crash_reports_thread.h
    ${CRASHPAD_PATH}/handler/user_stream_data_source.cc
    ${CRASHPAD_PATH}/handler/user_stream_data_source.h

    ${CRASHPAD_PATH}/minidump/minidump_annotation_writer.cc
    ${CRASHPAD_PATH}/minidump/minidump_annotation_writer.h
    ${CRASHPAD_PATH}/minidump/minidump_byte_array_writer.cc
    ${CRASHPAD_PATH}/minidump/minidump_byte_array_writer.h
    ${CRASHPAD_PATH}/minidump/minidump_context_writer.cc
    ${CRASHPAD_PATH}/minidump/minidump_context_writer.h
    ${CRASHPAD_PATH}/minidump/minidump_crashpad_info_writer.cc
    ${CRASHPAD_PATH}/minidump/minidump_crashpad_info_writer.h
    ${CRASHPAD_PATH}/minidump/minidump_exception_writer.cc
    ${CRASHPAD_PATH}/minidump/minidump_exception_writer.h
    ${CRASHPAD_PATH}/minidump/minidump_file_writer.cc
    ${CRASHPAD_PATH}/minidump/minidump_file_writer.h
    ${CRASHPAD_PATH}/minidump/minidump_handle_writer.cc
    ${CRASHPAD_PATH}/minidump/minidump_handle_writer.h
    ${CRASHPAD_PATH}/minidump/minidump_memory_info_writer.cc
    ${CRASHPAD_PATH}/minidump/minidump_memory_info_writer.h
    ${CRASHPAD_PATH}/minidump/minidump_memory_writer.cc
    ${CRASHPAD_PATH}/minidump/minidump_memory_writer.h
    ${CRASHPAD_PATH}/minidump/minidump_misc_info_writer.cc
    ${CRASHPAD_PATH}/minidump/minidump_misc_info_writer.h
    ${CRASHPAD_PATH}/minidump/minidump_module_crashpad_info_writer.cc
    ${CRASHPAD_PATH}/minidump/minidump_module_crashpad_info_writer.h
    ${CRASHPAD_PATH}/minidump/minidump_module_writer.cc
    ${CRASHPAD_PATH}/minidump/minidump_module_writer.h
    ${CRASHPAD_PATH}/minidump/minidump_rva_list_writer.cc
    ${CRASHPAD_PATH}/minidump/minidump_rva_list_writer.h
    ${CRASHPAD_PATH}/minidump/minidump_simple_string_dictionary_writer.cc
    ${CRASHPAD_PATH}/minidump/minidump_simple_string_dictionary_writer.h
    ${CRASHPAD_PATH}/minidump/minidump_stream_writer.cc
    ${CRASHPAD_PATH}/minidump/minidump_stream_writer.h
    ${CRASHPAD_PATH}/minidump/minidump_string_writer.cc
    ${CRASHPAD_PATH}/minidump/minidump_string_writer.h
    ${CRASHPAD_PATH}/minidump/minidump_system_info_writer.cc
    ${CRASHPAD_PATH}/minidump/minidump_system_info_writer.h
    ${CRASHPAD_PATH}/minidump/minidump_thread_id_map.cc
    ${CRASHPAD_PATH}/minidump/minidump_thread_id_map.h
    ${CRASHPAD_PATH}/minidump/minidump_thread_writer.cc
    ${CRASHPAD_PATH}/minidump/minidump_thread_writer.h
    ${CRASHPAD_PATH}/minidump/minidump_unloaded_module_writer.cc
    ${CRASHPAD_PATH}/minidump/minidump_unloaded_module_writer.h
    ${CRASHPAD_PATH}/minidump/minidump_user_extension_stream_data_source.cc
    ${CRASHPAD_PATH}/minidump/minidump_user_extension_stream_data_source.h
    ${CRASHPAD_PATH}/minidump/minidump_user_stream_writer.cc
    ${CRASHPAD_PATH}/minidump/minidump_user_stream_writer.h
    ${CRASHPAD_PATH}/minidump/minidump_writable.cc
    ${CRASHPAD_PATH}/minidump/minidump_writable.h
    ${CRASHPAD_PATH}/minidump/minidump_writer_util.cc
    ${CRASHPAD_PATH}/minidump/minidump_writer_util.h

    ${CHROMIUM_PATH}/base/atomicops.h
    ${CHROMIUM_PATH}/base/atomicops_internals_atomicword_compat.h
    ${CHROMIUM_PATH}/base/atomicops_internals_portable.h
    ${CHROMIUM_PATH}/base/auto_reset.h
    ${CHROMIUM_PATH}/base/bit_cast.h
    ${CHROMIUM_PATH}/base/check.h
    ${CHROMIUM_PATH}/base/check_op.h
    ${CHROMIUM_PATH}/base/compiler_specific.h
    ${CHROMIUM_PATH}/base/debug/alias.cc
    ${CHROMIUM_PATH}/base/debug/alias.h
    ${CHROMIUM_PATH}/base/files/file_path.cc
    ${CHROMIUM_PATH}/base/files/file_path.h
    ${CHROMIUM_PATH}/base/files/file_util.h
    ${CHROMIUM_PATH}/base/files/scoped_file.cc
    ${CHROMIUM_PATH}/base/files/scoped_file.h
    ${CHROMIUM_PATH}/base/format_macros.h
    ${CHROMIUM_PATH}/base/logging.cc
    ${CHROMIUM_PATH}/base/logging.h
    ${CHROMIUM_PATH}/base/macros.h
    ${CHROMIUM_PATH}/base/memory/free_deleter.h
    ${CHROMIUM_PATH}/base/memory/scoped_policy.h
    ${CHROMIUM_PATH}/base/metrics/histogram_functions.h
    ${CHROMIUM_PATH}/base/metrics/histogram_macros.h
    ${CHROMIUM_PATH}/base/metrics/persistent_histogram_allocator.h
    ${CHROMIUM_PATH}/base/notreached.h
    ${CHROMIUM_PATH}/base/numerics/checked_math.h
    ${CHROMIUM_PATH}/base/numerics/checked_math_impl.h
    ${CHROMIUM_PATH}/base/numerics/clamped_math.h
    ${CHROMIUM_PATH}/base/numerics/clamped_math_impl.h
    ${CHROMIUM_PATH}/base/numerics/safe_conversions.h
    ${CHROMIUM_PATH}/base/numerics/safe_conversions_arm_impl.h
    ${CHROMIUM_PATH}/base/numerics/safe_conversions_impl.h
    ${CHROMIUM_PATH}/base/numerics/safe_math.h
    ${CHROMIUM_PATH}/base/numerics/safe_math_arm_impl.h
    ${CHROMIUM_PATH}/base/numerics/safe_math_clang_gcc_impl.h
    ${CHROMIUM_PATH}/base/numerics/safe_math_shared_impl.h
    ${CHROMIUM_PATH}/base/process/memory.cc
    ${CHROMIUM_PATH}/base/process/memory.h
    ${CHROMIUM_PATH}/base/process/process_metrics.h
    ${CHROMIUM_PATH}/base/rand_util.cc
    ${CHROMIUM_PATH}/base/rand_util.h
    ${CHROMIUM_PATH}/base/scoped_clear_last_error.h
    ${CHROMIUM_PATH}/base/scoped_generic.h
    ${CHROMIUM_PATH}/base/stl_util.h
    ${CHROMIUM_PATH}/base/strings/string16.cc
    ${CHROMIUM_PATH}/base/strings/string16.h
    ${CHROMIUM_PATH}/base/strings/string_number_conversions.cc
    ${CHROMIUM_PATH}/base/strings/string_number_conversions.h
    ${CHROMIUM_PATH}/base/strings/string_piece.h
    ${CHROMIUM_PATH}/base/strings/string_util.h
    ${CHROMIUM_PATH}/base/strings/stringprintf.cc
    ${CHROMIUM_PATH}/base/strings/stringprintf.h
    ${CHROMIUM_PATH}/base/strings/sys_string_conversions.h
    ${CHROMIUM_PATH}/base/strings/utf_string_conversion_utils.cc
    ${CHROMIUM_PATH}/base/strings/utf_string_conversion_utils.h
    ${CHROMIUM_PATH}/base/strings/utf_string_conversions.cc
    ${CHROMIUM_PATH}/base/strings/utf_string_conversions.h
    ${CHROMIUM_PATH}/base/synchronization/condition_variable.h
    ${CHROMIUM_PATH}/base/synchronization/lock.cc
    ${CHROMIUM_PATH}/base/synchronization/lock.h
    ${CHROMIUM_PATH}/base/synchronization/lock_impl.h
    ${CHROMIUM_PATH}/base/sys_byteorder.h
    ${CHROMIUM_PATH}/base/template_util.h
    ${CHROMIUM_PATH}/base/third_party/icu/icu_utf.cc
    ${CHROMIUM_PATH}/base/third_party/icu/icu_utf.h
    ${CHROMIUM_PATH}/base/threading/thread_local_storage.cc
    ${CHROMIUM_PATH}/base/threading/thread_local_storage.h

    ${CHROMIUM_PATH}/base/process/process_metrics_win.cc
    ${CHROMIUM_PATH}/base/scoped_clear_last_error_win.cc
    ${CHROMIUM_PATH}/base/strings/string_util_win.cc
    ${CHROMIUM_PATH}/base/strings/string_util_win.h
    ${CHROMIUM_PATH}/base/synchronization/lock_impl_win.cc
    ${CHROMIUM_PATH}/base/threading/thread_local_storage_win.cc

    sources = [
      "file/delimited_file_reader.cc",
      "file/delimited_file_reader.h",
      "file/directory_reader.h",
      "file/file_helper.cc",
      "file/file_helper.h",
      "file/file_io.cc",
      "file/file_io.h",
      "file/file_reader.cc",
      "file/file_reader.h",
      "file/file_seeker.cc",
      "file/file_seeker.h",
      "file/file_writer.cc",
      "file/file_writer.h",
      "file/filesystem.h",
      "file/output_stream_file_writer.cc",
      "file/output_stream_file_writer.h",
      "file/scoped_remove_file.cc",
      "file/scoped_remove_file.h",
      "file/string_file.cc",
      "file/string_file.h",
      "misc/address_sanitizer.h",
      "misc/address_types.h",
      "misc/arraysize.h",
      "misc/as_underlying_type.h",
      "misc/capture_context.h",
      "misc/clock.h",
      "misc/elf_note_types.h",
      "misc/from_pointer_cast.h",
      "misc/implicit_cast.h",
      "misc/initialization_state.h",
      "misc/initialization_state_dcheck.cc",
      "misc/initialization_state_dcheck.h",
      "misc/lexing.cc",
      "misc/lexing.h",
      "misc/memory_sanitizer.h",
      "misc/metrics.cc",
      "misc/metrics.h",
      "misc/paths.h",
      "misc/pdb_structures.cc",
      "misc/pdb_structures.h",
      "misc/random_string.cc",
      "misc/random_string.h",
      "misc/range_set.cc",
      "misc/range_set.h",
      "misc/reinterpret_bytes.cc",
      "misc/reinterpret_bytes.h",
      "misc/scoped_forbid_return.cc",
      "misc/scoped_forbid_return.h",
      "misc/symbolic_constants_common.h",
      "misc/time.cc",
      "misc/time.h",
      "misc/tri_state.h",
      "misc/uuid.cc",
      "misc/uuid.h",
      "misc/zlib.cc",
      "misc/zlib.h",
      "net/http_body.cc",
      "net/http_body.h",
      "net/http_body_gzip.cc",
      "net/http_body_gzip.h",
      "net/http_headers.h",
      "net/http_multipart_builder.cc",
      "net/http_multipart_builder.h",
      "net/http_transport.cc",
      "net/http_transport.h",
      "net/url.cc",
      "net/url.h",
      "numeric/checked_address_range.cc",
      "numeric/checked_address_range.h",
      "numeric/checked_range.h",
      "numeric/checked_vm_address_range.h",
      "numeric/in_range_cast.h",
      "numeric/int128.h",
      "numeric/safe_assignment.h",
      "process/process_id.h",
      "process/process_memory.cc",
      "process/process_memory.h",
      "process/process_memory_native.h",
      "process/process_memory_range.cc",
      "process/process_memory_range.h",
      "stdlib/aligned_allocator.cc",
      "stdlib/aligned_allocator.h",
      "stdlib/map_insert.h",
      "stdlib/objc.h",
      "stdlib/string_number_conversion.cc",
      "stdlib/string_number_conversion.h",
      "stdlib/strlcpy.cc",
      "stdlib/strlcpy.h",
      "stdlib/strnlen.cc",
      "stdlib/strnlen.h",
      "stdlib/thread_safe_vector.h",
      "stream/base94_output_stream.cc",
      "stream/base94_output_stream.h",
      "stream/file_encoder.cc",
      "stream/file_encoder.h",
      "stream/file_output_stream.cc",
      "stream/file_output_stream.h",
      "stream/log_output_stream.cc",
      "stream/log_output_stream.h",
      "stream/output_stream_interface.h",
      "stream/zlib_output_stream.cc",
      "stream/zlib_output_stream.h",
      "string/split_string.cc",
      "string/split_string.h",
      "synchronization/semaphore.h",
      "thread/stoppable.h",
      "thread/thread.cc",
      "thread/thread.h",
      "thread/thread_log_messages.cc",
      "thread/thread_log_messages.h",
      "thread/worker_thread.cc",
      "thread/worker_thread.h",
)

add_executable(crashpad_handler ${HANDLER_SRC})

target_include_directories(crashpad_handler PUBLIC
    ${PROJECT_BINARY_DIR}
    ${CRASHPAD_PATH}
    ${CRASHPAD_PATH}/third_party/mini_chromium/mini_chromium
    ${CRASHPAD_PATH}/compat/win
)

target_compile_definitions(crashpad_handler PUBLIC
    -DOS_WIN
    -DNOMINMAX
    -DUNICODE
    -DWIN32_LEAN_AND_MEAN
    -DWIN32
    -DZLIB_CONST
    -DCRASHPAD_USE_BORINGSSL
)

target_link_libraries(crashpad_handler
    crypto
    ssl
    advapi32
)


